--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "devlopr jekyll blog",
-  "description": "A Jekyll Theme built for Developers",
-  "repository": "https://github.com/sujaykundu777/devlopr-jekyll",
-  "keywords": ["jekyll", "blog"]
+  "name": "yrhs-dev's Growth Blog",
+  "description": "I'm a developer who pursues the convergence of hardware, software & design.",
+  "repository": "https://github.com/yrhs-dev",
+  "keywords": ["yrhs-dev", "blog"]
 }
