--- a/_config.yml
+++ b/_config.yml
@@ -236,9 +236,26 @@ show_author_awards: true
 show_author_research: true
 
 # pagination of posts
-paginate: 4
-per_page: 4
+paginate: 10
+per_page: 10
 paginate_path: "/blog/page/:num/"
+
+paginate: 10
+per_page: 10
+paginate_path: "/hardware/page/:num/"
+
+paginate: 10
+per_page: 10
+paginate_path: "/software/page/:num/"
+
+paginate: 10
+per_page: 10
+paginate_path: "/design/page/:num/"
+
+paginate: 10
+per_page: 10
+paginate_path: "/plan/page/:num/"
+
 
 # minify
 # compress_html:
