--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: yrhs-dev
-subtitle: yrhs-dev's Growth Blog 
+subtitle: Growth Blog 
 description: >- # this means to ignore newlines until "baseurl:"
   Hyunsu Jang(yrhs-dev) is a developer who pursues the convergence of hardware, software & design. 
 
